--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,12 @@
         "initializer_list": "cpp",
         "string_view": "cpp",
         "*.tcc": "cpp",
-        "system_error": "cpp"
+        "system_error": "cpp",
+        "*.sh": "cpp",
+        "*.md": "cpp",
+        "*.properties": "cpp",
+        "*.ini": "cpp",
+        "random": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
