--- a/libraries/IRremote/library.properties
+++ b/libraries/IRremote/library.properties
@@ -1,5 +1,5 @@
 name=IRremote
-version=2.8.1
+version=3.0.0
 author=shirriff, z3t0 <zetoslab@gmail.com>, ArminJo
 maintainer=Armin Joachimsmeyer <armin.arduino@gmail.com>
 sentence=Send and receive infrared signals with multiple protocols
@@ -7,3 +7,4 @@ paragraph=Currently included protocols: Denon, JVC, LG,  NEC, Panasonic / Kaseik
 category=Communication
 url=https://github.com/z3t0/Arduino-IRremote
 architectures=avr,megaavr,samd,esp32,mbed
+includes=IRremote.h
