serial)CM windows uploadok

--- a/libraries/AsyncHTTPRequest_Generic/platformio/platformio.ini
+++ b/libraries/AsyncHTTPRequest_Generic/platformio/platformio.ini
@@ -40,14 +40,16 @@ lib_deps =
   STM32AsyncTCP@>=1.0.0
   STM32duino LwIP@>=2.1.2
   STM32duino STM32Ethernet@>=1.2.0
-  ESPAsync_WiFiManager@>=1.4.1
+  ESPAsync_WiFiManager@>=1.6.0
+  LittleFS_esp32@>=1.0.5
 ; PlatformIO 5.x  
 ; me-no-dev/AsyncTCP@>=1.1.1
 ; me-no-dev/ESPAsyncTCP@>=1.2.2
 ; philbowles/STM32AsyncTCP@>=1.0.0
 ; stm32duino/STM32duino LwIP@>=2.1.2
 ; stm32duino/STM32duino STM32Ethernet@>=1.2.0
-; khoih-prog/ESPAsync_WiFiManager@>=1.4.1
+; khoih-prog/ESPAsync_WiFiManager@>=1.6.0
+; lorol/LittleFS_esp32@>=1.0.5
   
 build_flags =
 ; set your debug output (default=Serial)
