--- a/libraries/AsyncHTTPRequest_Generic/library.properties
+++ b/libraries/AsyncHTTPRequest_Generic/library.properties
@@ -1,12 +1,12 @@
 name=AsyncHTTPRequest_Generic
-version=1.1.2
+version=1.1.3
 author=Bob Lemaire,Khoi Hoang <khoih.prog@gmail.com>
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
 license=MIT
-sentence=Simple Async HTTP Request library, supporting GET, POST, PUT, PATCH, DELETE and HEAD, on top of AsyncTCP libraries, such as AsyncTCP, ESPAsyncTCP, AsyncTCP_STM32, etc.. for ESP32, ESP8266 and currently STM32 with built-in LAN8742A Ethernet.
-paragraph=This AsyncHTTPRequest_Generic Library, supporting GET and POST, for ESP32, ESP8266 and STM32 with built-in LAN8742A Ethernet, such as Nucleo-144 F767ZI, etc.
+sentence=Simple Async HTTP Request library, supporting GET, POST, PUT, PATCH, DELETE and HEAD, on top of AsyncTCP libraries, such as AsyncTCP, ESPAsyncTCP, AsyncTCP_STM32, etc.. for ESP32 (including ESP32-S2), ESP8266 and currently STM32 with built-in LAN8742A Ethernet.
+paragraph=This AsyncHTTPRequest_Generic Library, supporting GET, POST, PUT, PATCH, DELETE and HEAD, for ESP32 (including ESP32-S2), ESP8266 and STM32 with built-in LAN8742A Ethernet, such as Nucleo-144 F767ZI, etc.
 category=Communication,AsyncTCP,AsyncHTTP
 url=https://github.com/khoih-prog/AsyncHTTPRequest_Generic
 architectures=*
-depends=AsyncTCP,ESP AsyncTCP,ESPAsync_WiFiManager,STM32duino LwIP,STM32duino STM32Ethernet,STM32 AsyncTCP
+depends=AsyncTCP,ESP AsyncTCP,ESPAsync_WiFiManager,STM32duino LwIP,STM32duino STM32Ethernet,STM32 AsyncTCP,LittleFS_esp32
 includes=AsyncHTTPRequest_Generic.h
