--- a/libraries/Adafruit_MCP9808_Library/library.properties
+++ b/libraries/Adafruit_MCP9808_Library/library.properties
@@ -1,5 +1,5 @@
 name=Adafruit MCP9808 Library
-version=1.1.2
+version=2.0.0
 author=Adafruit
 maintainer=Adafruit <info@adafruit.com>
 sentence=Arduino library for the MCP9808 sensors in the Adafruit shop
@@ -7,4 +7,4 @@ paragraph=Arduino library for the MCP9808 sensors in the Adafruit shop
 category=Sensors
 url=https://github.com/adafruit/Adafruit_MCP9808_Library
 architectures=*
-depends=Adafruit Unified Sensor
+depends=Adafruit Unified Sensor, Adafruit BusIO, Adafruit SH110X
