--- a/libraries/Adafruit_seesaw_Library/library.properties
+++ b/libraries/Adafruit_seesaw_Library/library.properties
@@ -1,5 +1,5 @@
 name=Adafruit seesaw Library
-version=1.4.6
+version=1.5.0
 author=Adafruit
 maintainer=Adafruit <info@adafruit.com>
 sentence=This is a library for the Adafruit seesaw helper IC.
@@ -7,4 +7,4 @@ paragraph=This is a library for the Adafruit seesaw helper IC.
 category=Other
 url=https://github.com/adafruit/Adafruit_Seesaw
 architectures=*
-depends=Adafruit ST7735 and ST7789 Library
+depends=Adafruit BusIO, Adafruit ST7735 and ST7789 Library
