--- a/libraries/myLOG/platformio.ini
+++ b/libraries/myLOG/platformio.ini
@@ -12,9 +12,5 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-
 lib_deps = 
-	knolleary/PubSubClient@^2.8
-	jandrassy/ArduinoOTA@^1.0.8
-	bblanchon/ArduinoJson@^6.19.4
-	https://github.com/guydvir2/myLOG.git
+    LittleFS @ ^0.1.0
