--- a/libraries/AsyncHTTPRequest_Generic/platformio/platformio.ini
+++ b/libraries/AsyncHTTPRequest_Generic/platformio/platformio.ini
@@ -45,20 +45,20 @@ lib_deps =
 ;  https://github.com/khoih-prog/STM32AsyncTCP.git
 ;  STM32duino LwIP@>=2.1.2
 ;  STM32duino STM32Ethernet@>=1.3.0
-;  ESPAsync_WiFiManager@>=1.14.0
+;  ESPAsync_WiFiManager@>=1.15.0
 ;  LittleFS_esp32@>=1.0.6
-;  WebServer_WT32_ETH01@>=1.5.0
-
+;  WebServer_WT32_ETH01@>=1.5.1
+;
 ; PlatformIO 5.x  
- me-no-dev/AsyncTCP@>=1.1.1
- me-no-dev/ESPAsyncTCP@>=1.2.2
+; me-no-dev/AsyncTCP@>=1.1.1
+; me-no-dev/ESPAsyncTCP@>=1.2.2
 ;  philbowles/STM32AsyncTCP
 ; https://github.com/khoih-prog/STM32AsyncTCP.git
 ; stm32duino/STM32duino LwIP@>=2.1.2
 ; stm32duino/STM32duino STM32Ethernet@>=1.3.0
- khoih-prog/ESPAsync_WiFiManager@>=1.14.0
+; khoih-prog/ESPAsync_WiFiManager@>=1.15.0
 ; lorol/LittleFS_esp32@>=1.0.6
-; khoih-prog/WebServer_WT32_ETH01@>=1.5.0
+; khoih-prog/WebServer_WT32_ETH01@>=1.5.1
   
 build_flags =
 ; set your debug output (default=Serial)
@@ -69,6 +69,16 @@ build_flags =
 [env:ESP8266]
 platform = espressif8266
 framework = arduino
+
+lib_deps =  
+; PlatformIO 4.x
+;  ESPAsyncTCP@>=1.2.2
+;  ESPAsync_WiFiManager@>=1.15.0
+;
+; PlatformIO 5.x  
+ me-no-dev/ESPAsyncTCP@>=1.2.2
+ khoih-prog/ESPAsync_WiFiManager@>=1.15.0
+
 ; ============================================================
 ; Board configuration
 ; choose your board by uncommenting one of the following lines
@@ -114,6 +124,20 @@ board = nodemcuv2
 [env:ESP32]
 platform = espressif32
 framework = arduino
+
+lib_deps =  
+; PlatformIO 4.x
+;  AsyncTCP@>=1.1.1
+;  ESPAsync_WiFiManager@>=1.15.0
+;  LittleFS_esp32@>=1.0.6
+;  WebServer_WT32_ETH01@>=1.5.1
+;
+; PlatformIO 5.x  
+ me-no-dev/AsyncTCP@>=1.1.1
+ khoih-prog/ESPAsync_WiFiManager@>=1.15.0
+; lorol/LittleFS_esp32@>=1.0.6
+ khoih-prog/WebServer_WT32_ETH01@>=1.5.1
+
 ; ============================================================
 ; Board configuration
 ; choose your board by uncommenting one of the following lines
@@ -249,6 +273,18 @@ board = feather52840
 [env:STM32]
 platform = ststm32
 framework = arduino
+
+lib_deps =  
+; PlatformIO 4.x
+;  https://github.com/khoih-prog/STM32AsyncTCP.git
+;  STM32duino LwIP@>=2.1.2
+;  STM32duino STM32Ethernet@>=1.3.0
+;
+; PlatformIO 5.x  
+  philbowles/STM32AsyncTCP
+ https://github.com/khoih-prog/STM32AsyncTCP.git
+ stm32duino/STM32duino LwIP@>=2.1.2
+ stm32duino/STM32duino STM32Ethernet@>=1.3.0
 
 ; ============================================================
 ; Choose your board by uncommenting one of the following lines
