before merge between PCs

--- a/libraries/UrlEncode/library.properties
+++ b/libraries/UrlEncode/library.properties
@@ -1,7 +1,7 @@
 name=UrlEncode
-version=1.0.0
-author=Masayuki Sugahara,equaaqua@hotmail.com
-maintainer=Masayuki Sugahara,equaaqua@hotmail.com
+version=1.0.1
+author=Masayuki Sugahara<equaaqua@hotmail.com>
+maintainer=Masayuki Sugahara<equaaqua@hotmail.com>
 sentence=Simple URL encoder (also known as percent encoding)
 paragraph=working with UTF-8 strings.
 category=Data Processing
